--- a/distutils/apiref.po
+++ b/distutils/apiref.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:39+0100\n"
-"PO-Revision-Date: 2020-09-13 20:10-0400\n"
-"Last-Translator: Samantha Valdez\n"
+"PO-Revision-Date: 2021-08-02 10:58+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/apiref.rst:5
 msgid "API Reference"
@@ -2143,31 +2144,45 @@ msgid ""
 "earlier returned only a single additional field with the AIX Version and "
 "Release."
 msgstr ""
+"Para AIX, Python 3.9 y versiones posteriores retornan una cadena que "
+"comienza con \"aix\", seguida de campos adicionales (separados por ``'-'``) "
+"que representan los valores combinados de Versión de AIX, Release y Nivel de "
+"tecnología (primer campo), Fecha de Construcción (segundo campo) y tamaño de "
+"bits (tercer campo). Python 3.8 y anteriores devolvieron solo un campo "
+"adicional con la versión y lanzamiento de AIX."
 
 #: ../Doc/distutils/apiref.rst:1151
-#, fuzzy
 msgid "Examples of returned values on AIX:"
-msgstr "Ejemplos de valores retornados:"
+msgstr "Ejemplos de valores retornados en AIX:"
 
 #: ../Doc/distutils/apiref.rst:1153
 msgid ""
 "``aix-5307-0747-32`` # 32-bit build on AIX ``oslevel -s``: 5300-07-00-0000"
 msgstr ""
+"``aix-5307-0747-32`` # construcción 32-bit en AIX ``oslevel -s``: "
+"5300-07-00-0000"
 
 #: ../Doc/distutils/apiref.rst:1155
 msgid ""
 "``aix-7105-1731-64`` # 64-bit build on AIX ``oslevel -s``: 7100-05-01-1731"
 msgstr ""
+"``aix-7105-1731-64`` # construcción 64-bit en AIX ``oslevel -s``: "
+"7100-05-01-1731"
 
 #: ../Doc/distutils/apiref.rst:1157
 msgid "``aix-7.2``          # Legacy form reported in Python 3.8 and earlier"
 msgstr ""
+"``aix-7.2``          # Forma heredada informada en Python 3.8 y versiones "
+"anteriores"
 
 #: ../Doc/distutils/apiref.rst:1159
 msgid ""
 "The AIX platform string format now also includes the technology level, build "
 "date, and ABI bit-size."
 msgstr ""
+"El formato de cadena de caracteres de la plataforma AIX ahora también "
+"incluye el nivel de tecnología, la fecha de construcción y el tamaño de bits "
+"de ABI."
 
 #: ../Doc/distutils/apiref.rst:1166
 msgid ""
@@ -2524,8 +2539,8 @@ msgid ""
 "The option_table is a list of 3-tuples: ``(long_option, short_option, "
 "help_string)``"
 msgstr ""
-"option_table es una lista de 3 tuplas: ``(long_option, short_option, "
-"help_string)``"
+"La opción option_table es una lista de 3 tuplas: ``(long_option, "
+"short_option, help_string)``"
 
 #: ../Doc/distutils/apiref.rst:1381
 msgid ""
