--- a/distutils/introduction.po
+++ b/distutils/introduction.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:39+0100\n"
-"PO-Revision-Date: 2020-05-13 22:20-0500\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 10:53+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-esMIME-Version: 1.0\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/introduction.rst:5
 msgid "An Introduction to Distutils"
@@ -66,9 +67,7 @@ msgstr "(opcional) escribir un archivo de configuración"
 msgid "create a source distribution"
 msgstr "crear una distribución fuente"
 
-# no estoy seguro de "built distribution"
 #: ../Doc/distutils/introduction.rst:31
-#, fuzzy
 msgid "(optional) create one or more built (binary) distributions"
 msgstr "(opcional) crear una o más distribuciones construidas (binarias)"
 
@@ -280,7 +279,7 @@ msgid ""
 msgstr ""
 "(El comando :command:`bdist_rpm` utiliza el ejecutable :command:`rpm`, por "
 "lo tanto, esto debe ejecutarse en un sistema basado en RPM como Red Hat "
-"Linux, SuSE Linux o Mandrake Linux)."
+"Linux, SuSE Linux o Mandrake Linux.)"
 
 #: ../Doc/distutils/introduction.rst:138
 msgid ""
@@ -348,13 +347,13 @@ msgid ""
 "(Note that currently, the Distutils only handles C/C++ extensions for "
 "Python.)"
 msgstr ""
-"Un módulo escrito en el lenguaje de bajo nivel de la implementación de "
+"un módulo escrito en el lenguaje de bajo nivel de la implementación de "
 "Python: C/C++ para Python, Java para Jython. Típicamente contenido en un "
 "único archivo precompilado cargable dinámicamente, ejemplo, un archivo de "
 "objeto compartido (:file: .so`) para extensiones de Python en Unix, una DLL "
 "(dada la extensión :file:`.pyd`) para extensiones de Python en Windows, o un "
 "archivo de clase Java para extensiones de Jython. (Tenga en cuenta que "
-"actualmente, Distutils solo maneja extensiones C/C++ para Python)."
+"actualmente, Distutils solo maneja extensiones C/C++ para Python.)"
 
 #: ../Doc/distutils/introduction.rst:175
 msgid "package"
