--- a/distutils/builtdist.po
+++ b/distutils/builtdist.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:39+0100\n"
-"PO-Revision-Date: 2020-10-15 16:05+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 10:55+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_ES\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/distutils/builtdist.rst:5
 msgid "Creating Built Distributions"
@@ -395,9 +396,8 @@ msgstr "*bdist_wininst* se encuentra obsoleto desde Python 3.8."
 
 #: ../Doc/distutils/builtdist.rst:153 ../Doc/distutils/builtdist.rst:311
 #: ../Doc/distutils/builtdist.rst:479
-#, fuzzy
 msgid "bdist_msi is deprecated since Python 3.9."
-msgstr "*bdist_wininst* se encuentra obsoleto desde Python 3.8."
+msgstr "bdist_msi está deprecado desde Python 3.9."
 
 #: ../Doc/distutils/builtdist.rst:155
 msgid ""
