--- a/faq/design.po
+++ b/faq/design.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-06-28 19:40+0200\n"
+"PO-Revision-Date: 2021-08-02 11:17+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/design.rst:3
 msgid "Design and History FAQ"
@@ -55,7 +56,6 @@ msgstr ""
 "los programadores de C encontrarán un fragmento de código como este::"
 
 #: ../Doc/faq/design.rst:26
-#, fuzzy
 msgid ""
 "Only the ``x++`` statement is executed if the condition is true, but the "
 "indentation leads many to believe otherwise.  Even experienced C programmers "
@@ -75,6 +75,11 @@ msgid ""
 "is normal to feel somewhat uneasy when reading (or being required to write) "
 "in a different one."
 msgstr ""
+"Debido a que no hay corchetes de inicio/fin, Python es mucho menos propenso "
+"a conflictos de estilo de codificación. En C hay muchas formas diferentes de "
+"colocar los frenillos. Después de acostumbrarse a leer y escribir código "
+"usando un estilo en particular, es normal sentirse algo incómodo al leer (o "
+"tener que escribir) en uno diferente."
 
 #: ../Doc/faq/design.rst:38
 msgid ""
@@ -1101,15 +1106,13 @@ msgstr ""
 "class:`~collections.abc.MutableMapping`."
 
 #: ../Doc/faq/design.rst:575
-#, fuzzy
 msgid ""
 "For Python, many of the advantages of interface specifications can be "
 "obtained by an appropriate test discipline for components."
 msgstr ""
 "Para Python, muchas de las ventajas de las especificaciones de interfaz se "
 "pueden obtener mediante una disciplina de prueba adecuada para los "
-"componentes. También hay una herramienta, PyChecker, que se puede usar para "
-"encontrar problemas debido a la subclasificación."
+"componentes."
 
 #: ../Doc/faq/design.rst:578
 msgid ""
@@ -1152,7 +1155,6 @@ msgstr ""
 "trivial verificar esta propiedad en un conjunto de pruebas."
 
 #: ../Doc/faq/design.rst:594
-#, fuzzy
 msgid ""
 "Writing test suites is very helpful, and you might want to design your code "
 "to make it easily tested. One increasingly popular technique, test-driven "
@@ -1179,9 +1181,14 @@ msgid ""
 "expressions) and loop (with ``while`` and ``for`` statements, possibly "
 "containing ``continue`` and ``break``)."
 msgstr ""
+"En la década de 1970, la gente se dio cuenta de que el goto irrestricto "
+"podía generar un código \"espagueti\" desordenado que era difícil de "
+"entender y revisar. En un lenguaje de alto nivel, también es innecesario "
+"siempre que haya formas de bifurcar (en Python, con declaraciones ``if`` y "
+"``or``, ``and`` y ``if-else`` expresiones) y bucle (con declaraciones "
+"``while`` y ``for``, que posiblemente contengan ``continue`` y ``break``)."
 
 #: ../Doc/faq/design.rst:611
-#, fuzzy
 msgid ""
 "One can also use exceptions to provide a \"structured goto\" that works even "
 "across function calls.  Many feel that exceptions can conveniently emulate "
@@ -1258,7 +1265,6 @@ msgstr ""
 "atributos?"
 
 #: ../Doc/faq/design.rst:660
-#, fuzzy
 msgid ""
 "Python has a 'with' statement that wraps the execution of a block, calling "
 "code on the entrance and exit from the block.  Some languages have a "
