--- a/faq/extending.po
+++ b/faq/extending.po
@@ -11,16 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-08-10 07:54-0300\n"
+"PO-Revision-Date: 2021-08-02 11:16+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: \n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
-"X-Generator: Poedit 2.4\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/extending.rst:3
 msgid "Extending/Embedding FAQ"
@@ -136,15 +136,14 @@ msgid "How can I evaluate an arbitrary Python expression from C?"
 msgstr "¿Cómo puedo evaluar una expresión arbitraria de Python desde C?"
 
 #: ../Doc/faq/extending.rst:74
-#, fuzzy
 msgid ""
 "Call the function :c:func:`PyRun_String` from the previous question with the "
 "start symbol :c:data:`Py_eval_input`; it parses an expression, evaluates it "
 "and returns its value."
 msgstr ""
 "Llama a la función :c:func:`PyRun_String` de la pregunta anterior con el "
-"símbolo de comienzo (*start*) :c:data:`Py_eval_input`; analiza una "
-"expresión, evalúa y retorna su valor."
+"símbolo de comienzo :c:data:`Py_eval_input`; analiza una expresión, evalúa y "
+"retorna su valor."
 
 #: ../Doc/faq/extending.rst:80
 msgid "How do I extract C values from a Python object?"
@@ -233,7 +232,7 @@ msgid ""
 msgstr ""
 "Esto funciona para cualquier objeto que tenga métodos -- sean estos "
 "incorporados o definidos por el usuario. Eres responsable si eventualmente "
-"usas :c:func:`Py_DECREF` en el valor de retorno.\""
+"usas :c:func:`Py_DECREF` en el valor de retorno."
 
 #: ../Doc/faq/extending.rst:124
 msgid ""
@@ -278,7 +277,7 @@ msgstr ""
 #: ../Doc/faq/extending.rst:149
 msgid "The easiest way to do this is to use the :class:`io.StringIO` class:"
 msgstr ""
-"La manera mas fácil de hacer esto es usar la clase :class:`io.StringIO`."
+"La manera mas fácil de hacer esto es usar la clase :class:`io.StringIO`:"
 
 #: ../Doc/faq/extending.rst:161
 msgid "A custom object to do the same would look like this:"
@@ -368,7 +367,6 @@ msgid "How do I debug an extension?"
 msgstr "¿Cómo puedo depurar una extención?"
 
 #: ../Doc/faq/extending.rst:226
-#, fuzzy
 msgid ""
 "When using GDB with dynamically loaded extensions, you can't set a "
 "breakpoint in your extension until your extension is loaded."
@@ -414,9 +412,8 @@ msgid "For Debian, run ``apt-get install python-dev``."
 msgstr "Para Debian, corre ``apt-get install python-dev``."
 
 #: ../Doc/faq/extending.rst:259
-#, fuzzy
 msgid "How do I tell \"incomplete input\" from \"invalid input\"?"
-msgstr "¿Cómo digo \"incomplete input\" desde \"invalid input\"?"
+msgstr "¿Cómo digo \"entrada incompleta\" desde \"entrada inválida\"?"
 
 #: ../Doc/faq/extending.rst:261
 msgid ""
@@ -433,7 +430,6 @@ msgstr ""
 "inmediatamente cuando la entrada es invalida."
 
 #: ../Doc/faq/extending.rst:267
-#, fuzzy
 msgid ""
 "In Python you can use the :mod:`codeop` module, which approximates the "
 "parser's behavior sufficiently.  IDLE uses this, for example."
@@ -495,9 +491,8 @@ msgstr ""
 "llamas a readline())::"
 
 #: ../Doc/faq/extending.rst:432
-#, fuzzy
 msgid "How do I find undefined g++ symbols __builtin_new or __pure_virtual?"
-msgstr "¿Cómo encuentro símbolos g++ __builtin_new or __pure_virtual?"
+msgstr "¿Cómo encuentro símbolos g++ __builtin_new o __pure_virtual?"
 
 #: ../Doc/faq/extending.rst:434
 msgid ""
