--- a/faq/programming.po
+++ b/faq/programming.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-07-26 11:04+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 11:05+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/programming.rst:5
 msgid "Programming FAQ"
@@ -76,7 +77,6 @@ msgstr ""
 "idle), incluye un depurador gráfico."
 
 #: ../Doc/faq/programming.rst:31
-#, fuzzy
 msgid ""
 "PythonWin is a Python IDE that includes a GUI debugger based on pdb.  The "
 "Pythonwin debugger colors breakpoints and has quite a few cool features such "
@@ -85,12 +85,12 @@ msgid ""
 ">`__ project and as a part of the ActivePython distribution (see https://www."
 "activestate.com/activepython\\ )."
 msgstr ""
-"PythonWin es un IDE Python que incluye un depurador con  GUI basado en pdb.  "
+"PythonWin es un IDE Python que incluye un depurador con GUI basado en pdb. "
 "El depurador PythonWin colorea los puntos de interrupción y dispone de "
-"características  geniales como la depuración de programas no modificados "
-"mediante PythonWin.  PythonWin está disponible como parte del proyecto `Las "
-"extensiones de Python  para Windows <https://sourceforge.net/projects/"
-"pywin32/>`__  y como parte de la distribución ActivePython (ver https://www."
+"características geniales como la depuración de programas no modificados "
+"mediante PythonWin. PythonWin está disponible como parte del proyecto `Las "
+"extensiones de Python para Windows <https://sourceforge.net/projects/pywin32/"
+">`__ y como parte de la distribución ActivePython (ver https://www."
 "activestate.com/activepython\\ )."
 
 #: ../Doc/faq/programming.rst:38
@@ -134,7 +134,6 @@ msgid "PyCharm (https://www.jetbrains.com/pycharm/)"
 msgstr "PyCharm (https://www.jetbrains.com/pycharm/)"
 
 #: ../Doc/faq/programming.rst:55
-#, fuzzy
 msgid "Are there tools to help find bugs or perform static analysis?"
 msgstr ""
 "¿Existe alguna herramienta que ayude a encontrar errores o realizar análisis "
@@ -1286,7 +1285,6 @@ msgstr ""
 "144.0``."
 
 #: ../Doc/faq/programming.rst:842
-#, fuzzy
 msgid ""
 "By default, these interpret the number as decimal, so that ``int('0144') == "
 "144`` holds true, and ``int('0x144')`` raises :exc:`ValueError`. "
@@ -1298,8 +1296,8 @@ msgstr ""
 "Por defecto, estas interpretan el número como decimal de tal forma que "
 "``int('0144') == 144`` y ``int('0x144')`` lanzará :exc:`ValueError`. "
 "``int(string, base)`` toma la base para convertirlo desde un segundo "
-"parámetro opcional, por tanto ``int('0x144', 16) == 324``.  Si la base se "
-"especifica como  0, el número se interpreta usando las reglas de Python's "
+"parámetro opcional, por tanto ``int('0x144', 16) == 324``. Si la base se "
+"especifica como 0, el número se interpreta usando las reglas de Python's "
 "rules: un prefijo '0o' indica octal y un prefijo '0x' indica un número "
 "hexadecimal."
 
@@ -1405,10 +1403,8 @@ msgid "This is used in several places in the standard library, like this::"
 msgstr "Esto se usa en varios lugares de la biblioteca estándar, como esto::"
 
 #: ../Doc/faq/programming.rst:945
-#, fuzzy
 msgid "Use :func:`locals` to resolve the function name::"
-msgstr ""
-"Usa :func:`locals` o :func:`eval` para resolver el nombre de la función::"
+msgstr "Use :func:`locals` para resolver el nombre de la función::"
 
 #: ../Doc/faq/programming.rst:957
 msgid ""
@@ -1747,11 +1743,8 @@ msgid "How do I iterate over a sequence in reverse order?"
 msgstr "¿Cómo puedo iterar sobre una secuencia en orden inverso?"
 
 #: ../Doc/faq/programming.rst:1119
-#, fuzzy
 msgid "Use the :func:`reversed` built-in function::"
-msgstr ""
-"Usa la función incorporada :func:`reversed`, la cual se introdujo en la "
-"versión de 2.4 de Python::"
+msgstr "Usa la función incorporada :func:`reversed`::"
 
 #: ../Doc/faq/programming.rst:1124
 msgid ""
@@ -1800,9 +1793,8 @@ msgstr ""
 "y, posteriormente, puedes volver a una lista."
 
 #: ../Doc/faq/programming.rst:1157
-#, fuzzy
 msgid "How do you remove multiple items from a list"
-msgstr "¿Cómo eliminar duplicados de una lista?"
+msgstr "Cómo eliminar duplicados de una lista"
 
 #: ../Doc/faq/programming.rst:1159
 msgid ""
@@ -1813,9 +1805,8 @@ msgid ""
 msgstr ""
 
 #: ../Doc/faq/programming.rst:1168
-#, fuzzy
 msgid "The list comprehension may be fastest."
-msgstr "Usa una comprensión de listas::"
+msgstr "Esta comprensión de lista puede ser la más rápida."
 
 #: ../Doc/faq/programming.rst:1172
 msgid "How do you make an array in Python?"
