--- a/faq/windows.po
+++ b/faq/windows.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-07-22 10:31-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 11:03+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/faq/windows.rst:9
 msgid "Python on Windows FAQ"
@@ -230,7 +231,6 @@ msgid "How do I make an executable from a Python script?"
 msgstr "¿Cómo hacer un ejecutable a partir de un script de Python?"
 
 #: ../Doc/faq/windows.rst:143
-#, fuzzy
 msgid ""
 "See `cx_Freeze <https://cx-freeze.readthedocs.io/en/latest/>`_ for a "
 "distutils extension that allows you to create console and GUI executables "
@@ -239,10 +239,10 @@ msgid ""
 "Python 3 but a version that does is in development."
 msgstr ""
 "Consulte `cx_Freeze <https://anthony-tuininga.github.io/cx_Freeze/>`_ para "
-"obtener una extensión *distutils* que le permite crear ejecutables de "
-"consola y *GUI* a partir del código Python. `py2exe <http://www.py2exe.org/"
-">`_ es la extensión más popular para construir ejecutables basados ​​en Python "
-"2.x, pero la implementación en Python 3 está en desarrollo."
+"obtener una extensión distutils que le permite crear ejecutables de consola "
+"y GUI a partir del código Python. `py2exe <http://www.py2exe.org/>`_ es la "
+"extensión más popular para construir ejecutables basados ​​en Python 2.x, pero "
+"la implementación en Python 3 está en desarrollo."
 
 #: ../Doc/faq/windows.rst:151
 msgid "Is a ``*.pyd`` file the same as a DLL?"
@@ -515,12 +515,11 @@ msgid "How do I check for a keypress without blocking?"
 msgstr "¿Cómo verifico una pulsación de tecla sin bloquearla?"
 
 #: ../Doc/faq/windows.rst:282
-#, fuzzy
 msgid ""
 "Use the :mod:`msvcrt` module.  This is a standard Windows-specific extension "
 "module. It defines a function ``kbhit()`` which checks whether a keyboard "
 "hit is present, and ``getch()`` which gets one character without echoing it."
 msgstr ""
-"Use el módulo *msvcrt*. Es una extensión estándar específica de Windows, que "
-"define una función ``kbhit()`` que verifica si se ha presionado una tecla, y "
-"``getch()`` que recupera el carácter sin mostrarlo."
+"Use el módulo :mod:`msvcrt`. Es una extensión estándar específica de "
+"Windows, que define una función ``kbhit()`` que verifica si se ha presionado "
+"una tecla, y ``getch()`` que recupera el carácter sin mostrarlo."
