--- a/faq/gui.po
+++ b/faq/gui.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-05-09 18:01-0500\n"
+"PO-Revision-Date: 2021-08-02 11:10+0200\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
-"Last-Translator: Javier Daza <javierdazacomas@gmail.com>Language: es\n"
-"X-Generator: Poedit 2.3\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
+"X-Generator: Poedit 3.0\n"
+"Language: es\n"
 
 #: ../Doc/faq/gui.rst:5
 msgid "Graphic User Interface FAQ"
