--- a/install/index.po
+++ b/install/index.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:39+0100\n"
-"PO-Revision-Date: 2020-08-11 09:27-0300\n"
-"Last-Translator: Emmanuel Arias <eamanu@yaerobi.com>\n"
+"PO-Revision-Date: 2021-08-02 19:19+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/install/index.rst:7
 msgid "Installing Python Modules (Legacy version)"
@@ -2040,11 +2041,8 @@ msgstr ""
 "existentes con bibliotecas OMF del mismo nombre."
 
 #: ../Doc/install/index.rst:1067
-#, fuzzy
 msgid "Check https://www.sourceware.org/cygwin/ for more information"
-msgstr ""
-"Diríjase a https://www.sourceware.org/cygwin/ and http://www.mingw.org/ para "
-"mayor información"
+msgstr "Diríjase a https://www.sourceware.org/cygwin/ para mayor información"
 
 #: ../Doc/install/index.rst:1069
 msgid ""
