--- a/reference/compound_stmts.po
+++ b/reference/compound_stmts.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-07-05 14:52-0300\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 19:34+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/compound_stmts.rst:5
 msgid "Compound statements"
@@ -292,7 +293,6 @@ msgstr ""
 "código de limpieza para un grupo de sentencias:"
 
 #: ../Doc/reference/compound_stmts.rst:248
-#, fuzzy
 msgid ""
 "The :keyword:`except` clause(s) specify one or more exception handlers. When "
 "no exception occurs in the :keyword:`try` clause, no exception handler is "
@@ -307,18 +307,19 @@ msgid ""
 "tuple containing an item that is the class or a base class of the exception "
 "object."
 msgstr ""
-"La/s cláusula/s :keyword:`except` especifican uno o más gestores de "
-"excepciones. Cuando no se produce ninguna excepción en la cláusula :keyword:"
-"`try`, no se ejecuta ningún gestor de excepción. Cuando se produce una "
-"excepción en la suite :keyword:`!try`, se inicia la búsqueda de un gestor de "
-"excepciones. Esta búsqueda inspecciona las cláusulas ``except`` por turno "
-"hasta que se encuentre una que coincida con la excepción. Una cláusula "
-"excepción sin una expresión, si está presente, debe ser la última; coincide "
-"con cualquier excepción. Para una cláusula ``except`` con una expresión, esa "
+"Las cláusulas :keyword:`except` especifican uno o más manejadores de "
+"excepciones. Cuando no ocurre ninguna excepción en la palabra clave :keyword:"
+"`try`, no se ejecuta ningún controlador de excepciones. Cuando ocurre una "
+"excepción en la suite :keyword:`!try`, se inicia una búsqueda de un "
+"manejador de excepciones. Esta búsqueda inspecciona las cláusulas except a "
+"su vez hasta encontrar una que coincida con la excepción. Una cláusula "
+"except sin expresión, si está presente, debe ser la última; coincide con "
+"cualquier excepción. Para una cláusula except con una expresión, esa "
 "expresión se evalúa y la cláusula coincide con la excepción si el objeto "
 "resultante es \"compatible\" con la excepción. Un objeto es compatible con "
-"una excepción si es la clase o una clase base del objeto de excepción o una "
-"tupla que contiene un elemento compatible con la excepción."
+"una excepción si es la clase o una clase base del objeto de excepción, o una "
+"tupla que contiene un elemento que es la clase o una clase base del objeto "
+"de excepción."
 
 #: ../Doc/reference/compound_stmts.rst:260
 msgid ""
@@ -714,6 +715,9 @@ msgid ""
 "Previously, the grammar was much more restrictive; see :pep:`614` for "
 "details."
 msgstr ""
+"Las funciones se pueden decorar con cualquier token válido :token:"
+"`assignment_expression`. Anteriormente, la gramática era mucho más "
+"restrictiva; ver :pep:`614` para más detalles."
 
 #: ../Doc/reference/compound_stmts.rst:565
 msgid ""
@@ -982,6 +986,9 @@ msgid ""
 "Previously, the grammar was much more restrictive; see :pep:`614` for "
 "details."
 msgstr ""
+"Las clases se pueden decorar con cualquier token válido :token:"
+"`assignment_expression`. Anteriormente, la gramática era mucho más "
+"restrictiva; ver :pep:`614` para más detalles."
 
 #: ../Doc/reference/compound_stmts.rst:732
 msgid ""
@@ -1078,18 +1085,16 @@ msgid "The :keyword:`!async for` statement"
 msgstr "La sentencia :keyword:`!async for`"
 
 #: ../Doc/reference/compound_stmts.rst:803
-#, fuzzy
 msgid ""
 "An :term:`asynchronous iterable` provides an ``__aiter__`` method that "
 "directly returns an :term:`asynchronous iterator`, which can call "
 "asynchronous code in its ``__anext__`` method."
 msgstr ""
-"Un :term:`asynchronous iterable` es capaz de llamar código asincrónico en su "
-"implementación *iter*, y :term:`asynchronous iterator` puede llamar a código "
-"asincrónico en su método *next*."
+"Un :term:`asynchronous iterable` proporciona un método ``__aiter__`` que "
+"retorna directamente un :term:`asynchronous iterator`, que puede llamar a "
+"código asincrónico en su método ``__anext__``."
 
 #: ../Doc/reference/compound_stmts.rst:807
-#, fuzzy
 msgid ""
 "The ``async for`` statement allows convenient iteration over asynchronous "
 "iterables."
