--- a/reference/datamodel.po
+++ b/reference/datamodel.po
@@ -11,7 +11,7 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2021-03-19 22:57+0100\n"
+"PO-Revision-Date: 2021-08-02 19:35+0200\n"
 "Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
-"X-Generator: Poedit 2.4.1\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/datamodel.rst:6
 msgid "Data model"
@@ -270,7 +270,6 @@ msgid "NotImplemented"
 msgstr "NotImplemented"
 
 #: ../Doc/reference/datamodel.rst:155
-#, fuzzy
 msgid ""
 "This type has a single value.  There is a single object with this value. "
 "This object is accessed through the built-in name ``NotImplemented``. "
@@ -280,11 +279,12 @@ msgid ""
 "the operator.)  It should not be evaluated in a boolean context."
 msgstr ""
 "Este tipo tiene un solo valor. Hay un solo objeto con este valor. Se accede "
-"a este objeto a través del nombre incorporado ``NotImplemented``. Los "
-"métodos numéricos y los métodos de comparación enriquecidos deberían "
-"retornar este valor si no implementan la operación para los operandos "
-"proporcionados. (El intérprete intentará la operación reflejada, o alguna "
-"otra alternativa, dependiendo del operador). Su valor de verdad es verdadero."
+"a este objeto a través del nombre integrado ``NotImplemented``. Los métodos "
+"numéricos y los métodos de comparación enriquecidos deben devolver este "
+"valor si no implementan la operación para los operandos proporcionados. (El "
+"intérprete intentará entonces la operación reflejada, o alguna otra "
+"alternativa, dependiendo del operador). No debe evaluarse en un contexto "
+"booleano."
 
 #: ../Doc/reference/datamodel.rst:162
 msgid "See :ref:`implementing-the-arithmetic-operations` for more details."
@@ -1013,7 +1013,6 @@ msgstr ""
 "valor asignado."
 
 #: ../Doc/reference/datamodel.rst:564
-#, fuzzy
 msgid ""
 "Function objects also support getting and setting arbitrary attributes, "
 "which can be used, for example, to attach metadata to functions.  Regular "
@@ -1022,13 +1021,13 @@ msgid ""
 "functions. Function attributes on built-in functions may be supported in the "
 "future.*"
 msgstr ""
-"Los objetos de función también admiten obtener y establecer atributos "
-"arbitrarios, que pueden usarse, por ejemplo, para adjuntar metadatos a "
-"funciones. La notación regular de atributo por punto se usa para obtener y "
-"establecer tales atributos. *Tenga en cuenta que la implementación actual "
-"solo admite atributos de función en funciones definidas por el usuario. Los "
-"atributos de función en funciones incorporadas pueden ser compatibles en el "
-"futuro.*"
+"Los objetos de función también admiten la obtención y configuración de "
+"atributos arbitrarios, que se pueden usar, por ejemplo, para adjuntar "
+"metadatos a funciones. La notación de puntos de atributo regular se utiliza "
+"para obtener y establecer dichos atributos. *Tenga en cuenta que la "
+"implementación actual solo admite atributos de función en funciones "
+"definidas por el usuario. Los atributos de función en funciones integradas "
+"pueden ser compatibles en el futuro.*"
 
 #: ../Doc/reference/datamodel.rst:570
 msgid ""
