--- a/reference/expressions.po
+++ b/reference/expressions.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-12-06 14:19+0100\n"
-"Last-Translator: Álvaro Mondéjar Rubio <mondejar1994@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:31+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/expressions.rst:6
 msgid "Expressions"
@@ -721,7 +722,6 @@ msgstr ""
 "ejecución de cualquier cláusula :keyword:`finally` pendiente."
 
 #: ../Doc/reference/expressions.rst:479
-#, fuzzy
 msgid ""
 "When ``yield from <expr>`` is used, the supplied expression must be an "
 "iterable. The values produced by iterating that iterable are passed directly "
@@ -732,15 +732,14 @@ msgid ""
 "exc:`AttributeError` or :exc:`TypeError`, while :meth:`~generator.throw` "
 "will just raise the passed in exception immediately."
 msgstr ""
-"Cuando se usa ``yield from <expr>``, esto trata a la expresión provista como "
-"un subiterador. Todos los valores producidos por ese subiterador son pasados "
-"directamente al invocador de los métodos del generador actual. Cualquiera de "
-"los valores pasados con :meth:`~generator.send` y cualquiera de las "
-"excepciones pasadas con :meth:`~generator.throw` son pasados al iterador "
-"subyacente si tiene los métodos apropiados. Si este no es el caso, entonces :"
-"meth:`~generator.send` generará :exc:`AttributeError` o :exc:`TypeError`, "
-"mientras :meth:`~generator.throw` sólo generará inmediatamente la excepción "
-"pasada."
+"Cuando se usa ``yield from <expr>``, la expresión proporcionada debe ser "
+"iterable. Los valores producidos al iterar ese iterable se pasan "
+"directamente al llamador de los métodos del generador actual. Cualquier "
+"valor pasado con :meth:`~generator.send` y cualquier excepción pasada con :"
+"meth:`~generator.throw` se pasan al iterador subyacente si tiene los métodos "
+"apropiados. Si este no es el caso, entonces :meth:`~generator.send` "
+"generará :exc:`AttributeError` o :exc:`TypeError`, mientras que :meth:"
+"`~generator.throw` solo generará la excepción pasada inmediatamente."
 
 #: ../Doc/reference/expressions.rst:488
 msgid ""
@@ -1216,13 +1215,12 @@ msgid "Subscriptions"
 msgstr "Suscripciones"
 
 #: ../Doc/reference/expressions.rst:803
-#, fuzzy
 msgid ""
 "Subscription of a sequence (string, tuple or list) or mapping (dictionary) "
 "object usually selects an item from the collection:"
 msgstr ""
-"Una subscripción selecciona un elemento de una objeto secuencia (cadena de "
-"caracteres, tupla o lista) o mapeo (diccionario):"
+"La suscripción de una secuencia (cadena, tupla o lista) o un objeto de mapeo "
+"(diccionario) generalmente selecciona un elemento de la colección:"
 
 #: ../Doc/reference/expressions.rst:809
 msgid ""
@@ -1300,6 +1298,10 @@ msgid ""
 "defined classes can support subscription by providing a :meth:"
 "`__class_getitem__` classmethod."
 msgstr ""
+"La suscripción de ciertos :term:`clases <class>` o :term:`tipos <type>` crea "
+"un :ref:`alias genérico <types-genericalias>`. En este caso, las clases "
+"definidas por el usuario pueden admitir la suscripción proporcionando un "
+"método de clase :meth:`__class_getitem__`."
 
 #: ../Doc/reference/expressions.rst:849
 msgid "Slicings"
@@ -2558,14 +2560,18 @@ msgid ""
 "\"walrus\") assigns an :token:`expression` to an :token:`identifier`, while "
 "also returning the value of the :token:`expression`."
 msgstr ""
+"Una expresión de asignación (a veces también llamada \"expresión con nombre"
+"\" o \"walrus\") asigna un :token:`expression` a un :token:`identifier`, "
+"mientras que también retorna el valor de :token:`expression`."
 
 #: ../Doc/reference/expressions.rst:1666
 msgid "One common use case is when handling matched regular expressions:"
 msgstr ""
+"Un caso de uso común es cuando se manejan expresiones regulares coincidentes:"
 
 #: ../Doc/reference/expressions.rst:1673
 msgid "Or, when processing a file stream in chunks:"
-msgstr ""
+msgstr "O, al procesar un flujo de archivos en fragmentos:"
 
 #: ../Doc/reference/expressions.rst:1680
 msgid "See :pep:`572` for more details about assignment expressions."
