--- a/reference/simple_stmts.po
+++ b/reference/simple_stmts.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-12-04 13:39+0100\n"
-"Last-Translator: Elena He <mikan1985@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:21+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language-Team: python-doc-es\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Generated-By: Babel 2.8.0\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "Language: es\n"
-"X-Generator: Poedit 2.4.2\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/reference/simple_stmts.rst:6
 msgid "Simple statements"
@@ -1457,17 +1457,17 @@ msgstr ""
 "variables fuera del ámbito local además del ámbito global (módulo)."
 
 #: ../Doc/reference/simple_stmts.rst:1002
-#, fuzzy
 msgid ""
 "Names listed in a :keyword:`nonlocal` statement, unlike those listed in a :"
 "keyword:`global` statement, must refer to pre-existing bindings in an "
 "enclosing scope (the scope in which a new binding should be created cannot "
 "be determined unambiguously)."
 msgstr ""
-"Los nombres enumerados en una declaración :keyword:`nonlocal`, a diferencia "
-"de los enumerados en una declaración :keyword:`global`, deben hacer "
-"referencia a enlaces preexistentes en un ámbito adjunto (el ámbito en el que "
-"se debe crear un nuevo enlace no se puede determinar de forma inequívoca)."
+"Los nombres enumerados en una instrucción :keyword:`nonlocal`, a diferencia "
+"de los enumerados en una instrucción :keyword:`global`, deben hacer "
+"referencia a enlaces preexistentes en un ámbito adjunto (no se puede "
+"determinar el ámbito en el que se debe crear un nuevo enlace "
+"inequívocamente)."
 
 #: ../Doc/reference/simple_stmts.rst:1007
 msgid ""
