--- a/tutorial/datastructures.po
+++ b/tutorial/datastructures.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 13:51+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 19:49+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/datastructures.rst:5
 msgid "Data Structures"
@@ -673,6 +674,10 @@ msgid ""
 "idiomatic way to loop over unique elements of the sequence in sorted "
 "order. ::"
 msgstr ""
+"El uso de :func:`set` en una secuencia elimina los elementos duplicados. El "
+"uso de :func:`sorted` en combinación con :func:`set` sobre una secuencia es "
+"una forma idiomática de recorrer elementos únicos de la secuencia en orden "
+"ordenado. ::"
 
 #: ../Doc/tutorial/datastructures.rst:640
 msgid ""
