--- a/tutorial/inputoutput.po
+++ b/tutorial/inputoutput.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 14:34+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 19:48+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/inputoutput.rst:5
 msgid "Input and Output"
@@ -235,18 +236,17 @@ msgstr ""
 "Se pueden combinar arbitrariamente argumentos posicionales y nombrados::"
 
 #: ../Doc/tutorial/inputoutput.rst:172
-#, fuzzy
 msgid ""
 "If you have a really long format string that you don't want to split up, it "
 "would be nice if you could reference the variables to be formatted by name "
 "instead of by position.  This can be done by simply passing the dict and "
 "using square brackets ``'[]'`` to access the keys. ::"
 msgstr ""
-"Si tenés una cadena de formateo realmente larga que no querés separar, "
-"podría ser bueno que puedas hacer referencia a las variables a ser "
-"formateadas por el nombre en vez de la posición.  Esto puede hacerse "
-"simplemente pasando el diccionario y usando corchetes ``'[]'`` para acceder "
-"a las claves ::"
+"Si tiene una cadena de caracteres de formato realmente larga que no desea "
+"dividir, sería bueno si pudiera hacer referencia a las variables que se "
+"formatearán por nombre en lugar de por posición. Esto se puede hacer "
+"simplemente pasando el dict y usando corchetes ``'[]'`` para acceder a las "
+"claves. ::"
 
 #: ../Doc/tutorial/inputoutput.rst:182
 msgid ""
@@ -295,7 +295,7 @@ msgid ""
 "`print` works: it always adds spaces between its arguments.)"
 msgstr ""
 "(Resaltar que el espacio existente entre cada columna es añadido debido a "
-"como funciona :func:`print`: siempre añade espacios entre sus argumentos)."
+"como funciona :func:`print`: siempre añade espacios entre sus argumentos.)"
 
 #: ../Doc/tutorial/inputoutput.rst:237
 msgid ""
@@ -338,6 +338,11 @@ msgid ""
 "zero or more elements of ``values``. This operation is commonly known as "
 "string interpolation. For example::"
 msgstr ""
+"El operador % (módulo) también se puede utilizar para formatear cadenas de "
+"caracteres. Dados los ``'cadena de caracteres' % valores``, las instancias "
+"de ``%`` en ``cadena de caracteres`` se reemplazan con cero o más elementos "
+"de ``valores``. Esta operación se conoce comúnmente como interpolación de "
+"cadenas. Por ejemplo::"
 
 #: ../Doc/tutorial/inputoutput.rst:269
 msgid ""
@@ -433,6 +438,9 @@ msgid ""
 "close()`` to close the file and immediately free up any system resources "
 "used by it."
 msgstr ""
+"Si no está utilizando la palabra clave :keyword:`with`, entonces debe llamar "
+"a ``f.close()`` para cerrar el archivo y liberar inmediatamente los recursos "
+"del sistema utilizados por él."
 
 #: ../Doc/tutorial/inputoutput.rst:335
 msgid ""
@@ -440,6 +448,10 @@ msgid ""
 "``f.close()`` **might** result in the arguments of ``f.write()`` not being "
 "completely written to the disk, even if the program exits successfully."
 msgstr ""
+"Al llamar a ``f.write()`` sin usar la palabra clave :keyword::`!with` o "
+"llamar a ``f.close()`` **podría** dar como resultado los argumentos de ``f."
+"write()`` no se escribe completamente en el disco, incluso si el programa se "
+"cierra correctamente."
 
 #: ../Doc/tutorial/inputoutput.rst:343
 msgid ""
