--- a/tutorial/classes.po
+++ b/tutorial/classes.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 13:38+0200\n"
-"Last-Translator: Marco Richetta <marcorichetta@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:52+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/classes.rst:5
 msgid "Classes"
@@ -268,14 +269,13 @@ msgstr ""
 "dentro del espacio de nombres."
 
 #: ../Doc/tutorial/classes.rst:116
-#, fuzzy
 msgid ""
 "Although scopes are determined statically, they are used dynamically. At any "
 "time during execution, there are 3 or 4 nested scopes whose namespaces are "
 "directly accessible:"
 msgstr ""
-"Aunque los alcances se determinan estáticamente, se usan dinámicamente. En "
-"cualquier momento durante la ejecución hay por lo menos cuatro alcances "
+"Aunque los alcances se determinan de forma estática, se utilizan de forma "
+"dinámica. En cualquier momento durante la ejecución, hay 3 o 4 ámbitos "
 "anidados cuyos espacios de nombres son directamente accesibles:"
 
 #: ../Doc/tutorial/classes.rst:120
@@ -1282,7 +1282,6 @@ msgid "Generators"
 msgstr "Generadores"
 
 #: ../Doc/tutorial/classes.rst:852
-#, fuzzy
 msgid ""
 ":term:`Generators <generator>` are a simple and powerful tool for creating "
 "iterators.  They are written like regular functions but use the :keyword:"
@@ -1291,12 +1290,12 @@ msgid ""
 "the data values and which statement was last executed).  An example shows "
 "that generators can be trivially easy to create::"
 msgstr ""
-"Los :term:`Generator` son una simple y poderosa herramienta para crear "
-"iteradores.  Se escriben como funciones regulares pero usan la sentencia :"
-"keyword:`yield` cuando quieren retornar datos.  Cada vez que se llama :func:"
-"`next` sobre él, el generador continúa desde donde dejó (y recuerda todos "
-"los valores de datos y cual sentencia fue ejecutada última).  Un ejemplo "
-"muestra que los generadores pueden ser muy fáciles de crear::"
+":term:`Generators <generator>` son una herramienta simple y poderosa para "
+"crear iteradores. Están escritas como funciones regulares pero usan la "
+"palabra clave :keyword:`yield` siempre que quieran retornar datos. Cada vez "
+"que se llama a :func:`next`, el generador se reanuda donde lo dejó (recuerda "
+"todos los valores de datos y qué instrucción se ejecutó por última vez). Un "
+"ejemplo muestra que los generadores pueden ser trivialmente fáciles de crear:"
 
 #: ../Doc/tutorial/classes.rst:873
 msgid ""
