--- a/tutorial/controlflow.po
+++ b/tutorial/controlflow.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-21 14:04+0200\n"
-"Last-Translator: Raúl Cumplido <raulcumplido@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:51+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/controlflow.rst:5
 msgid "More Control Flow Tools"
@@ -340,7 +341,6 @@ msgstr ""
 "funciones que engloban la función local), aunque si pueden ser referenciadas."
 
 #: ../Doc/tutorial/controlflow.rst:294
-#, fuzzy
 msgid ""
 "The actual parameters (arguments) to a function call are introduced in the "
 "local symbol table of the called function when it is called; thus, arguments "
@@ -349,11 +349,12 @@ msgid ""
 "another function, or calls itself recursively, a new local symbol table is "
 "created for that call."
 msgstr ""
-"Los parámetros reales (argumentos) de una función se introducen en la tabla "
-"de símbolos local de la función llamada cuando esta es ejecutada; así, los "
-"argumentos son pasados por valor (dónde el valor es siempre una referencia a "
-"un objeto, no el valor del objeto). [#]_ Cuando una función llama a otra "
-"función, una nueva tabla de símbolos local es creada para esa llamada."
+"Los parámetros (argumentos) reales para una llamada de función se introducen "
+"en la tabla de símbolos local de la función llamada cuando se llama; por lo "
+"tanto, los argumentos se pasan usando *llamada por valor* (donde el *valor* "
+"es siempre un objeto *referencia*, no el valor del objeto). [#]_ Cuando una "
+"función llama a otra función, o se llama a sí misma de forma recursiva, se "
+"crea una nueva tabla de símbolos locales para esa llamada."
 
 #: ../Doc/tutorial/controlflow.rst:301
 msgid ""
@@ -362,6 +363,11 @@ msgid ""
 "to by that name as a user-defined function.  Other names can also point to "
 "that same function object and can also be used to access the function::"
 msgstr ""
+"Una definición de función asocia el nombre de la función con el objeto de "
+"función en la tabla de símbolos actual. El intérprete reconoce el objeto al "
+"que apunta ese nombre como una función definida por el usuario. Otros "
+"nombres también pueden apuntar a ese mismo objeto de función y también se "
+"pueden usar para acceder a la función:"
 
 #: ../Doc/tutorial/controlflow.rst:312
 msgid ""
@@ -761,13 +767,12 @@ msgstr ""
 "incluye ``name`` como una clave::"
 
 #: ../Doc/tutorial/controlflow.rst:661
-#, fuzzy
 msgid ""
 "There is no possible call that will make it return ``True`` as the keyword "
 "``'name'`` will always bind to the first parameter. For example::"
 msgstr ""
-"No existe una llamada que retorne ``True`` ya que la clave ``'name'`` será "
-"siempre asignada al primer parámetro. Por ejemplo::"
+"No hay una llamada posible que lo haga retornar ``True`` ya que la palabra "
+"clave ``'name'`` siempre se vinculará al primer parámetro. Por ejemplo::"
 
 #: ../Doc/tutorial/controlflow.rst:670
 msgid ""
@@ -801,7 +806,7 @@ msgstr ""
 
 #: ../Doc/tutorial/controlflow.rst:688
 msgid "As guidance:"
-msgstr "A modo de guía: "
+msgstr "A modo de guía:"
 
 #: ../Doc/tutorial/controlflow.rst:690
 msgid ""
@@ -833,9 +838,8 @@ msgid ""
 "For an API, use positional-only to prevent breaking API changes if the "
 "parameter's name is modified in the future."
 msgstr ""
-"Para una API, utilice únicamente posicionales para prevenir cambios que "
-"rompan con la compatibilidad de la API si el nombre del parámetro es "
-"modificado en el futuro. "
+"En el caso de una API, use solo posicional para evitar que se rompan los "
+"cambios de la API si el nombre del parámetro se modifica en el futuro."
 
 #: ../Doc/tutorial/controlflow.rst:704
 msgid "Arbitrary Argument Lists"
