--- a/tutorial/errors.po
+++ b/tutorial/errors.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 01:09+0200\n"
-"Last-Translator: Héctor Canto <hectorcanto@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:54+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/errors.rst:5
 msgid "Errors and Exceptions"
@@ -117,17 +118,16 @@ msgstr ""
 "qué la causó."
 
 #: ../Doc/tutorial/errors.rst:69
-#, fuzzy
 msgid ""
 "The preceding part of the error message shows the context where the "
 "exception occurred, in the form of a stack traceback. In general it contains "
 "a stack traceback listing source lines; however, it will not display lines "
 "read from standard input."
 msgstr ""
-"La parte anterior del mensaje de error muestra el contexto donde ha sucedido "
-"la excepción, en formato de *traza de error*. En general, contiene una traza "
-"de error que lista líneas de código fuente; sin embargo, no mostrará líneas "
-"leídas desde la entrada estándar."
+"La parte anterior del mensaje de error muestra el contexto donde ocurrió la "
+"excepción, en forma de seguimiento de pila. En general, contiene un "
+"seguimiento de pila que enumera las líneas de origen; sin embargo, no "
+"mostrará las líneas leídas desde la entrada estándar."
 
 #: ../Doc/tutorial/errors.rst:74
 msgid ""
@@ -158,7 +158,7 @@ msgstr ""
 
 #: ../Doc/tutorial/errors.rst:96
 msgid "The :keyword:`try` statement works as follows."
-msgstr "La declaración :keyword:`try` funciona de la siguiente manera:"
+msgstr "La sentencia :keyword:`try` funciona de la siguiente manera."
 
 #: ../Doc/tutorial/errors.rst:98
 msgid ""
@@ -361,17 +361,20 @@ msgstr ""
 
 #: ../Doc/tutorial/errors.rst:273
 msgid "Exception Chaining"
-msgstr ""
+msgstr "Encadenamiento de excepciones"
 
 #: ../Doc/tutorial/errors.rst:275
 msgid ""
 "The :keyword:`raise` statement allows an optional :keyword:`from` which "
 "enables chaining exceptions. For example::"
 msgstr ""
+"La instrucción :keyword:`raise` permite una palabra clave opcional :keyword:"
+"`from` que habilita el encadenamiento de excepciones. Por ejemplo::"
 
 #: ../Doc/tutorial/errors.rst:281
 msgid "This can be useful when you are transforming exceptions. For example::"
 msgstr ""
+"Esto puede resultar útil cuando está transformando excepciones. Por ejemplo::"
 
 #: ../Doc/tutorial/errors.rst:302
 msgid ""
@@ -379,11 +382,17 @@ msgid ""
 "an :keyword:`except` or :keyword:`finally` section. Exception chaining can "
 "be disabled by using ``from None`` idiom:"
 msgstr ""
+"El encadenamiento de excepciones ocurre automáticamente cuando se genera una "
+"excepción dentro de una sección palabra clave :keyword:`except` o :keyword:"
+"`finally`. El encadenamiento de excepciones se puede deshabilitar usando el "
+"modismo ``from None``:"
 
 #: ../Doc/tutorial/errors.rst:315
 msgid ""
 "For more information about chaining mechanics, see :ref:`bltin-exceptions`."
 msgstr ""
+"Para obtener más información sobre la mecánica del encadenamiento, consulte :"
+"ref:`bltin-exceptions`."
 
 #: ../Doc/tutorial/errors.rst:321
 msgid "User-defined Exceptions"
