--- a/tutorial/interpreter.po
+++ b/tutorial/interpreter.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-05-09 14:41+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 19:45+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/interpreter.rst:5
 msgid "Using the Python Interpreter"
@@ -30,17 +31,16 @@ msgid "Invoking the Interpreter"
 msgstr "Invocando al intérprete"
 
 #: ../Doc/tutorial/interpreter.rst:13
-#, fuzzy
 msgid ""
 "The Python interpreter is usually installed as :file:`/usr/local/bin/"
 "python3.9` on those machines where it is available; putting :file:`/usr/"
 "local/bin` in your Unix shell's search path makes it possible to start it by "
 "typing the command:"
 msgstr ""
-"Por lo general, el intérprete de Python se instala en :file:`/usr/local/bin/"
-"python3.8` en las máquinas dónde está disponible; poner :file:`/usr/local/"
-"bin` en el camino de búsqueda de tu intérprete de comandos Unix hace posible "
-"iniciarlo ingresando la orden:"
+"El intérprete de Python generalmente se instala como :file:`/usr/local/bin/"
+"python3.9` en aquellas máquinas donde está disponible; poner :file:`/usr/"
+"local/bin` en la ruta de búsqueda de su shell de Unix hace posible iniciarlo "
+"escribiendo el comando:"
 
 #: ../Doc/tutorial/interpreter.rst:21
 msgid ""
@@ -55,7 +55,6 @@ msgstr ""
 "(Por ejemplo, :file:`/usr/local/python` es una alternativa popular)."
 
 #: ../Doc/tutorial/interpreter.rst:26
-#, fuzzy
 msgid ""
 "On Windows machines where you have installed Python from the :ref:`Microsoft "
 "Store <windows-store>`, the :file:`python3.9` command will be available. If "
@@ -63,11 +62,11 @@ msgid ""
 "file:`py` command. See :ref:`setting-envvars` for other ways to launch "
 "Python."
 msgstr ""
-"En ordenadores con Windows dónde Python se encuentra instalado desde la :ref:"
-"`Microsoft Store <windows-store>`, el comando :file:`python3.8` estará "
-"disponible. Si tienes el :ref:`py.exe launcher <launcher>` instalado, puedes "
-"utilizar el comando :file:`py`. Ver :ref:`setting-envvars` para otras formas "
-"de ejecutar Python."
+"En máquinas Windows en las que haya instalado Python desde :ref:`Microsoft "
+"Store <windows-store>`, el comando :file:`python3.9` estará disponible. Si "
+"tiene instalado :ref:`py.exe launcher <launcher>`, puede usar el comando :"
+"file:`py`. Consulte :ref:`setting-envvars` para conocer otras formas de "
+"iniciar Python."
 
 #: ../Doc/tutorial/interpreter.rst:31
 msgid ""
