--- a/tutorial/venv.po
+++ b/tutorial/venv.po
@@ -11,8 +11,8 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2020-05-05 12:54+0200\n"
-"PO-Revision-Date: 2020-05-09 14:05+0200\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 19:44+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es\n"
 "Language-Team: python-doc-es\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
@@ -20,7 +20,7 @@ msgstr ""
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
-"X-Generator: Poedit 2.3\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/tutorial/venv.rst:6
 msgid "Virtual Environments and Packages"
@@ -157,7 +157,7 @@ msgid ""
 msgstr ""
 "(Este script está escrito para la consola bash. Si usas las consolas :"
 "program:`csh` or :program:`fish`, hay scripts alternativos ``activate.csh`` "
-"y ``activate.fish`` que deberá usar en su lugar)."
+"y ``activate.fish`` que deberá usar en su lugar.)"
 
 #: ../Doc/tutorial/venv.rst:74
 msgid ""
