--- a/using/cmdline.po
+++ b/using/cmdline.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-08-28 09:36-0400\n"
-"Last-Translator: \n"
+"PO-Revision-Date: 2021-08-02 20:02+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_AR\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/using/cmdline.rst:9
 msgid "Command line and environment"
@@ -749,6 +750,8 @@ msgid ""
 "``-X oldparser``: enable the traditional LL(1) parser.  See also :envvar:"
 "`PYTHONOLDPARSER` and :pep:`617`."
 msgstr ""
+"``-X oldparser``: habilita el analizador tradicional LL(1). Vea también :"
+"envvar:`PYTHONOLDPARSER` y :pep:`617`."
 
 #: ../Doc/using/cmdline.rst:431
 msgid ""
@@ -796,6 +799,9 @@ msgid ""
 "``-X dev``: enable :ref:`Python Development Mode <devmode>`, introducing "
 "additional runtime checks that are too expensive to be enabled by default."
 msgstr ""
+"``-X dev``: habilita :ref:`Python Development Mode <devmode>`, introduciendo "
+"comprobaciones de tiempo de ejecución adicionales que son demasiado caras "
+"para habilitarse de forma predeterminada."
 
 #: ../Doc/using/cmdline.rst:447
 msgid ""
@@ -861,16 +867,16 @@ msgid ""
 "Using ``-X dev`` option, check *encoding* and *errors* arguments on string "
 "encoding and decoding operations."
 msgstr ""
+"Usando la opción ``-X dev``, verifique *encoding* y *errors* argumentos en "
+"las operaciones de codificación y decodificación de cadenas de caracteres."
 
 #: ../Doc/using/cmdline.rst:481
-#, fuzzy
 msgid "The ``-X showalloccount`` option has been removed."
-msgstr "La opción ``-X showalloccount``."
+msgstr "Se ha eliminado la opción ``-X showalloccount``."
 
 #: ../Doc/using/cmdline.rst:484
-#, fuzzy
 msgid "The ``-X oldparser`` option."
-msgstr "La opción ``-VV``."
+msgstr "La opción ``-X analizador antiguo``."
 
 #: ../Doc/using/cmdline.rst:488
 msgid "Options you shouldn't use"
@@ -968,13 +974,12 @@ msgstr ""
 "Python como la variable :data:`sys.path`."
 
 #: ../Doc/using/cmdline.rst:543
-#, fuzzy
 msgid ""
 "If this is set to a non-empty string, it overrides the :data:`sys."
 "platlibdir` value."
 msgstr ""
-"Si se establece en una cadena no vacía, equivale a especificar la opción :"
-"option:`-i`."
+"Si se establece en una cadena no vacía, anula el valor :data:`sys."
+"platlibdir`."
 
 #: ../Doc/using/cmdline.rst:551
 msgid ""
@@ -1050,16 +1055,15 @@ msgstr ""
 "d` varias veces."
 
 #: ../Doc/using/cmdline.rst:592
-#, fuzzy
 msgid ""
 "If this is set to a non-empty string, enable the traditional LL(1) parser."
 msgstr ""
-"Si se establece en una cadena no vacía, equivale a especificar la opción :"
-"option:`-u`."
+"Si se establece en una cadena no vacía, habilite el analizador tradicional "
+"LL(1)."
 
 #: ../Doc/using/cmdline.rst:594
 msgid "See also the :option:`-X` ``oldparser`` option and :pep:`617`."
-msgstr ""
+msgstr "Vea también la opción :option:`-X` ``oldparser`` y :pep:`617`."
 
 #: ../Doc/using/cmdline.rst:601
 msgid ""
@@ -1535,7 +1539,6 @@ msgstr ""
 "ejecución de Python."
 
 #: ../Doc/using/cmdline.rst:885
-#, fuzzy
 msgid ""
 "Also note that even when locale coercion is disabled, or when it fails to "
 "find a suitable target locale, :envvar:`PYTHONUTF8` will still activate by "
@@ -1543,12 +1546,12 @@ msgid ""
 "order to force the interpreter to use ``ASCII`` instead of ``UTF-8`` for "
 "system interfaces."
 msgstr ""
-"Tenga en cuenta también que incluso cuando la coerción de configuración "
-"local está deshabilitada, o cuando no encuentra una configuración local de "
-"destino adecuada, :envvar:`PYTHONUTF8` seguirá activando de forma "
-"predeterminada en las configuraciones regionales basadas en ASCII heredadas. "
-"Ambas características deben ser inhabilitadas para forzar al intérprete a "
-"utilizar ``ASCII`` en lugar de ``UTF-8`` para las interfaces del sistema."
+"También tenga en cuenta que incluso cuando la coerción de configuración "
+"regional está desactivada, o cuando no puede encontrar una configuración "
+"regional de destino adecuada, :envvar:`PYTHONUTF8` se activará de forma "
+"predeterminada en las configuraciones regionales heredadas basadas en ASCII. "
+"Ambas funciones deben estar deshabilitadas para obligar al intérprete a usar "
+"``ASCII`` en lugar de ``UTF-8`` para las interfaces del sistema."
 
 #: ../Doc/using/cmdline.rst:892
 msgid ":ref:`Availability <availability>`: \\*nix."
@@ -1559,14 +1562,15 @@ msgid "See :pep:`538` for more details."
 msgstr "Consulte :pep:`538` para obtener más detalles."
 
 #: ../Doc/using/cmdline.rst:899
-#, fuzzy
 msgid ""
 "If this environment variable is set to a non-empty string, enable :ref:"
 "`Python Development Mode <devmode>`, introducing additional runtime checks "
 "that are too expensive to be enabled by default."
 msgstr ""
-"Si esta variable de entorno se establece en una cadena no vacía, habilite el "
-"\"modo de desarrollo\" de CPython. Consulte la opción :option:`-X` ``dev``."
+"Si esta variable de entorno se establece en una cadena no vacía, habilite :"
+"ref:`Python Development Mode <devmode>`, introduciendo comprobaciones de "
+"tiempo de ejecución adicionales que son demasiado caras para habilitarse de "
+"forma predeterminada."
 
 #: ../Doc/using/cmdline.rst:907
 msgid ""
