--- a/using/mac.po
+++ b/using/mac.po
@@ -11,15 +11,16 @@ msgstr ""
 "Project-Id-Version: Python 3.8\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2021-03-19 11:16+0100\n"
-"PO-Revision-Date: 2020-07-07 08:51-0500\n"
-"Last-Translator: Juan Alegría <juanszalegria@gmail.com>\n"
+"PO-Revision-Date: 2021-08-02 19:57+0200\n"
+"Last-Translator: Cristián Maureira-Fredes <cmaureirafredes@gmail.com>\n"
 "Language: es_CO\n"
 "Language-Team: python-doc-es\n"
-"Plural-Forms: nplurals=2; plural=(n != 1)\n"
+"Plural-Forms: nplurals=2; plural=(n != 1);\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=utf-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "Generated-By: Babel 2.8.0\n"
+"X-Generator: Poedit 3.0\n"
 
 #: ../Doc/using/mac.rst:6
 msgid "Using Python on a Macintosh"
@@ -73,6 +74,10 @@ msgid ""
 "Python distributions; and PythonLauncher, which handles double-clicking "
 "Python scripts from the Finder."
 msgstr ""
+"Una carpeta :file:`Python 3.9` en su carpeta :file:`Applications`. Aquí "
+"encontrará IDLE, el entorno de desarrollo que es una parte estándar de las "
+"distribuciones oficiales de Python; y PythonLauncher, que se encarga de "
+"hacer doble clic en los scripts de Python desde el Finder."
 
 #: ../Doc/using/mac.rst:33
 msgid ""
@@ -210,11 +215,10 @@ msgstr ""
 "comenzar tales scripts."
 
 #: ../Doc/using/mac.rst:95
-#, fuzzy
 msgid ""
 "With Python 3.9, you can use either :program:`python` or :program:`pythonw`."
 msgstr ""
-"Con Python 3.8, usted podrá utilizar ya sea :program:`python` o :program:"
+"Con Python 3.9, usted podrá utilizar ya sea :program:`python` o :program:"
 "`pythonw`."
 
 #: ../Doc/using/mac.rst:99
